# CCTVWebServer

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  config.json  vcpkg.json
cmake/: Dependencies.cmake
src/: main.cpp
src/core/: Config.cpp  CryptoHelper.cpp  CryptoHelper.hpp  Database.cpp  Database.hpp  HttpServer.cpp  ReplyHandlers.cpp  StreamRelayer.cpp  StreamRelayer.hpp  WebSocketSession.cpp  WebSocketSession.hpp
src/include/: Application.hpp  BaseTypes.hpp  Precompiled.hpp
src/www/: app.js  index.html  style.css
